<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="?android:attr/colorBackground"
    tools:ignore="Overdraw">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_edititem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_edititem"
            style="@style/Toolbar"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_edititem_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginhorizontal_huge"
            android:layout_marginStart="@dimen/marginhorizontal_huge"
            android:layout_marginRight="@dimen/marginhorizontal_huge"
            android:layout_marginEnd="@dimen/marginhorizontal_huge"
            android:layout_marginTop="@dimen/marginvertical_small"
            android:layout_marginBottom="@dimen/marginvertical_small"
            app:errorEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_edititem_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edititem_label_hint"
                style="@style/EditItem.AppBarTextField"
                />

        </android.support.design.widget.TextInputLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_edititem"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edititem_save"
        app:layout_anchor="@id/appbar_edititem"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_send"
        style="@style/FAB"
        />

</android.support.design.widget.CoordinatorLayout>
