...
        <string name="mainlist_menu_add_placeholders_label">Labeeeeel</string>
        <!-- Снекбары -->
        <string name="snackbar_item_added">Item added</string>
        <string name="snackbar_item_edited">Item edited</string>
        <string name="snackbar_item_removed">Item removed</string>
        <!-- Список -->
        <string name="mainlist_icon_contentdescription">Color</string>
        <!-- Поиск -->
        <string name="searchable_mainlist_hint">Search items</string>
        <string name="mainlist_menu_search">Search</string>
        <!-- Пользователи -->
        <string name="mainlist_user_title">User:</string>
        <string name="mainlist_user_change">(change)</string>
...
        <string name="mainlist_drawer_sort_symb_desc" translatable="false">↑</string>
        <string name="mainlist_drawer_debug_title">Debug options</string>
        <string name="mainlist_drawer_deleteall_title">Delete all</string>
        <string name="mainlist_drawer_fillplaceholders_title">Fill data</string>
        <!-- Бэкап -->
        <string name="mainlist_drawer_backup_title">Backup data</string>
        <string name="mainlist_drawer_backup_save">Save</string>
        <string name="mainlist_drawer_backup_restore">Restore</string>
        <string name="mainlist_drawer_backup_save_question_title">Save to file</string>
        <string name="mainlist_drawer_backup_save_question_text">This action will make backup of db in file. Proceed?</string>
        <string name="mainlist_drawer_backup_restore_question_title">Restore from file</string>
        <string name="mainlist_drawer_backup_restore_question_text">This action will replace everything in db with data in backup file. Are you sure to proceed?</string>
        <!-- Предупреждения -->
...
        <string name="edititem_label_hint">Label</string>
        <string name="edititem_description_hint">Description</string>
        <string name="edititem_color_hint">Color</string>
        <string name="edititem_date_created">Created:</string>
        <string name="edititem_date_modified">Modified:</string>
        <string name="edititem_imageurl_hint">Image url</string>
        <string name="edititem_image_contentdescription">Image from url</string>
        <!-- Ошибки -->
        <string name="edititem_error_title_empty">Please enter label</string>
        <string name="edititem_error_imageurl_malformed">Please type correct URL</string>
        <string name="edititem_error_imageurl_onload">Error loading image from URL</string>
        <!-- Меню -->
        <string name="edititem_menu_delete">Delete</string>
        <string name="edititem_menu_delete_question_title">Delete item</string>
        <string name="edititem_menu_delete_question_text">Are you sure to delete item?</string>
        <string name="edititem_menu_save">Save</string>
        <string name="edititem_menu_back_question_title">Undo changes</string>
        <string name="edititem_menu_back_question_text">Are you sure to undo changes?</string>
        <!-- Список -->
...
